cutoff issue still persist, isolated vegalite issue by cross checking react and editor demo, should be a CSS/HTML interference issue

--- a/react-jupyter-widget/css/widget.css
+++ b/react-jupyter-widget/css/widget.css
@@ -85,7 +85,7 @@ input[type=text], select {
   position: absolute;
 }
 #mainVizContainer{
-  padding: 10px 10px 0px 10px;
+  padding: 10px 10px 0px 0px;
   position: absolute;
   border: 0.5px solid #bcbdbd;
   overflow-y: auto;
@@ -95,24 +95,10 @@ input[type=text], select {
   height: 95%;
 }
 #mainVizInnerContainer{
-  width: 625px;
+  width: 290px;
+  height: 240px;
   top: 16%;
   position: absolute;
-}
-.recViz{
-  /* position: relative; */    
-  overflow-y: auto;
-  /*width: 370px;*/
-  /*max-height: 315px;*/
-  max-height: 290px;
-  height: auto;
-  /*  height: 295px;*/
-  display: inline-block;
-  margin: 5px 5px -5px 5px; /* padding around viz */
-}
-#mainVizContainer .recViz{
-  max-height: 480px;
-  height: auto;
 }
 #tabBanner{
   position: relative;
